--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,15 +28,21 @@ target_link_libraries(${NAME}
     pico_stdlib 
     tinyusb_host
     SPNG
+    
+    hardware_pio 
+	hardware_adc 
+	hardware_dma 
+	pico_graphics 
+	cosmic_unicorn
     )
 
 # enable usb output, disable uart output
 pico_enable_stdio_usb(${NAME} 0)
-pico_enable_stdio_uart(${NAME} 1)
-target_compile_definitions(${NAME} PRIVATE
-    PICO_DEFAULT_UART_RX_PIN=16
-    PICO_DEFAULT_UART_TX_PIN=17
-)
+pico_enable_stdio_uart(${NAME} 0)
+#target_compile_definitions(${NAME} PRIVATE
+#    PICO_DEFAULT_UART_RX_PIN=16
+#    PICO_DEFAULT_UART_TX_PIN=17
+#)
 
 # create map/bin/hex file etc.
 pico_add_extra_outputs(${NAME})
